# MyAtCoders

./: LICENSE  README.md
.github/workflows/: hello.yml
ABC285/Haskellv883/EdgeChecker2/: Main1.hs  Main2.hs
OCaml/many_formulae/: README.md  dune-project  input.txt
OCaml/many_formulae/_build/: .db  .digest-db  log
OCaml/many_formulae/_build/default/: many_formulae.opam
OCaml/many_formulae/_build/default/.dune/: configurator  configurator.v2
OCaml/many_formulae/_build/default/test/.many_formulae.eobjs/byte/: dune__exe__Many_formulae.cmi  dune__exe__Many_formulae.cmti
OCaml/many_formulae/_build/default/test/.many_formulae.eobjs/native/: dune__exe__Many_formulae.cmx
OCaml/many_formulae/_build/default/test/.merlin-conf/: exe-many_formulae
OCaml/many_formulae/lib/: dune
OCaml/many_formulae/test/: dune
