(lang dune 3.4)

(name many_formulae)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Nyarkits51")

(maintainers "Nyarkits51")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name many_formulae)
 (synopsis "For AtCoder many_formulae solution")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
